--- a/www/one-company-page.html
+++ b/www/one-company-page.html
@@ -141,15 +141,15 @@
               </div>
             </div>
 
-            <div class="b-one-company__message popup" popup-message="close">
+            <div class="message-popup" popup-message="close">
               <div class="b-message-confirm">
                 <div class="b-popup-message-close"></div>
                 <h3>Сообщение отправлено</h3>
               </div>
-              <div class="b-one-company__message-wrapp">
+              <div class="message-popup-wrapp">
                 <div class="b-popup-message-close"></div>
                 <h4>Написать сообщение</h4>
-                <form action="one-company-page_submit" method="get" accept-charset="utf-8" class="b-one-company__form">
+                <form action="" method="get" accept-charset="utf-8" class="message-popup__form">
                   <div class="b-form-item m-form-item_textarea m-form-item-inline">
                     <p><textarea rows="4" cols="60" name="message" class="text tab-input"></textarea></p>
                   </div>
