--- a/www/one-item-news.html
+++ b/www/one-item-news.html
@@ -116,7 +116,9 @@
                 <span class="date">16.10.2016</span>
                 <a href="#" class="author">Leonidis Castonedis</a>
               </p>
-              <img src="img/temp/auto/11.jpg" alt="" id="title-photo">
+              <figure>
+               <img src="img/temp/auto/11.jpg" alt="" id="title-photo">
+              </figure>
               <div class="text-content">
                 <p class="lead">
                   <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore obcaecati dolor dolore sed cum minus molestiae eum eaque harum placeat fuga eligendi unde ad, quas perferendis voluptas. Nemo, impedit, delectus.</span>
@@ -134,7 +136,9 @@
                     <span>Doloremque dolor assumenda, fuga doloribus at nostrum asperiores eveniet maxime quibusdam saepe inventore molestiae laborum exercitationem, in deserunt harum id consequuntur quia voluptates. Ea molestias, aliquam voluptatem ad unde eveniet.</span>
                     <span>Iusto nobis sed tempore pariatur dolorum ducimus, odio commodi, inventore reiciendis maxime suscipit repudiandae distinctio sit, autem illo dignissimos nisi quis voluptatem vitae quibusdam! Laboriosam blanditiis ex dicta et temporibus.</span>
                   </p>
-                  <img src="img/temp/14.jpg" alt="">
+                  <figure>
+                    <img src="img/temp/14.jpg" alt="">
+                  </figure>
                   <p class="text">
                     <span>Illum quibusdam in unde illo tempora! Pariatur provident accusantium dolor. Tempore exercitationem magni soluta architecto non modi, molestias dolorum rerum itaque laudantium reiciendis, deleniti nulla quidem similique adipisci dolores sit.</span>
                     <span>Nemo sapiente eligendi ipsum iusto voluptas temporibus! Ut aspernatur molestias ducimus, facilis sequi ipsa velit? Nesciunt, nulla molestias, enim illo labore voluptate tempore mollitia aspernatur, fugiat, accusantium provident itaque. Veritatis.</span>
@@ -153,7 +157,9 @@
                     <span>Quisquam et, sapiente illo veniam voluptatibus nihil cum, molestiae veritatis voluptate facere aliquid? Veniam quibusdam recusandae debitis facere, officiis sit doloremque illo. Culpa voluptatem deserunt soluta, nihil sunt sint blanditiis.</span>
                     <span>Eaque at aperiam aliquid impedit cum earum dolorem delectus rem dolorum, deserunt, architecto modi ullam id excepturi incidunt laboriosam qui natus velit inventore eligendi. Dolorum eum ad itaque nam qui.</span>
                   </p>
-                  <img src="img/temp/auto/12.jpg" alt="">
+                  <figure>
+                    <img src="img/temp/auto/12.jpg" alt="">
+                  </figure>
                   <p class="text">
                     <span>Blanditiis nobis repellendus nihil itaque architecto nulla quis dolorum asperiores excepturi, nostrum molestiae inventore natus necessitatibus accusamus consectetur saepe molestias quo dolor amet enim nam, perspiciatis quae! A, blanditiis, adipisci!</span>
                     <span>Hic odio necessitatibus provident placeat nostrum. Dolor ad voluptatum tenetur debitis magni nostrum, excepturi quisquam quas blanditiis eveniet quaerat architecto ullam rerum mollitia dolorum doloribus similique. Tenetur sed, totam minima.</span>
@@ -164,15 +170,20 @@
               </div>
 
               <div class="b-one-news__social b-social">
-                <a href="" class="b-social-item m-social-item_fb"></a>
-                <a href="" class="b-social-item m-social-item_tw"></a>
-                <a href="" class="b-social-item m-social-item_gm"></a>
+                <a href="#" class="b-social-item m-social-item_fb"></a>
+                <a href="#" class="b-social-item m-social-item_tw"></a>
+                <a href="#" class="b-social-item m-social-item_gm"></a>
               </div>
             </div>
 
             <div class="block b-comments">
               <div class="b-coment-wrapp paginator">
                 <h3>Комментарии</h3>
+
+              <p class="like-dislike">
+                <span class="like" title="Понравилось"></span>
+                <span class="dislike" title="Не понравилось"></span>
+              </p>
 
                 <div class="alert-register">
                   <h5>Участвовать в обсуждениях могут только зарегистрированные пользователи.</h5>
