Вторая часть рпавок (начало)

--- a/www/community.html
+++ b/www/community.html
@@ -38,6 +38,7 @@
     <script src="js/jquery.dropList.1.0.0.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -131,6 +132,7 @@
 <!--                     <div class="b-community__item item">
                       <figure>
                       <img src="img/temp/auto/1.png" alt="">
+                      <p class="b-community__item-name text"><a href="#" class="text" data-clamp>Alexis.Sanches</a></p>
                       </figure>
                       <div class="b-community__item-info text">
 
@@ -138,16 +140,13 @@
                           <img src="img/temp/author/2.jpg" alt="">
                         </div>
 
-                        <p>
-                          <a href="#" class="b-community__item-auto text">Audi Q7 Quattttttrooo!</a>
+                        <p class="b-community__item-auto text">
+                          <a href="#" >Audi Q7 Quattttttrooo!</a>
                         </p>
 
-                        <p class="b-community__item-author">
-                          <a href="#" class="text">Alexis.Sanches</a>
+                        <p class="b-community__item-city">
                           <a href="#" class="text ">Barcelona</a>
                         </p>
-
-
                       </div>
                     </div>-->
               </div>
@@ -171,7 +170,7 @@
           <section class="l-filter col xs-3">
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <!-- <h4><span class="all-community">256</span> сообществ</h4> -->
+                <h4><span class="all-community">Найти автомобиль</h4>
 
                 <form class="b-filter__form" name="filter">
 
