--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -446,6 +446,8 @@
                     </div>
 
                     <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
+
+                    <p class="b-filter-other-view text link"><a href='#' title="Последние просмотренные объявления">Последние просмотренные</a></p>
                   </form>
                 </div>
               </div>
