--- a/www/main.html
+++ b/www/main.html
@@ -142,6 +142,7 @@
 <!--                     <a href="#" title="" class="b-content__lider-previous-item item">
                       <figure>
                         <img src="img/temp/img-previous-1.jpg" alt="">
+                        <p class="b-content__lider-vote text bold"></p>
                       </figure>
                     </a>-->
                   </div>
@@ -153,6 +154,7 @@
 <!--                 <a href="#" title="" class="b-content__lider-gaining-item item">
                       <figure>
                         <img src="img/temp/img-previous-1.jpg" alt="">
+                        <p class="b-content__lider-vote text bold"></p>
                       </figure>
                     </a> -->
                   </div>
