Правки страницы Новости

--- a/www/community.html
+++ b/www/community.html
@@ -168,7 +168,8 @@
 
           <!-- Класс m-filter__switch-item_active - выбранный фильтр -->
           <section class="l-filter col xs-3">
-            <div class="block b-filter">
+            <div>
+<div class="block b-filter">
               <div class="b-filter-wrapp">
                 <h4><span class="all-community">Найти автомобиль</h4>
 
@@ -212,6 +213,7 @@
                  
                 </form>
               </div>
+            </div>
             </div>
           </section>
 
