--- a/www/main.html
+++ b/www/main.html
@@ -252,10 +252,12 @@
           </section>
 
           <section class="l-mark col sm-1 order-xs-3 xs-12">
-            <div class="block b-mark">
-              <ul class="b-mark__list">
-                <!-- <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>-->
-              </ul>
+            <div>
+              <div class="block b-mark">
+                <ul class="b-mark__list">
+                  <!-- <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>-->
+                </ul>
+              </div>
             </div>
           </section>
         </div>
